# pupper-bridge

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
src/: camera_capture.py  eye_renderer.py  gif_display.py  hardware_controller.py  lidar_reader.py  pi_bridge.py  poses.py  ros_controller_old.py
